--- a/styleMenuPrinicipal.css
+++ b/styleMenuPrinicipal.css
@@ -48,6 +48,7 @@
     .acc-item{
         border-top: 1px solid white;
         overflow: hidden;
+        position: center;
     }
     .btn{
         display: block;
@@ -55,10 +56,10 @@
         background:rgba(0,0,0,0.7);
         color: #fff;
         text-transform: uppercase;
-        position: relative;
+        position: center;
     }
     .btn:before{
-       content: "";
+        content: "";
         position: absolute;
         width: 1rem;
         height: 1rem;
@@ -70,6 +71,8 @@
     .btn i{
         margin-right: 0.5rem;
     }
+
+   
     .submenu{
        background:rgba(0,0,0,0.7);
        overflow: hidden;
